blueprints/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: argocd
  name: argocd-route
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: argocd
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: cilium
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    # filters:
    # - type: URLRewrite
    #   urlRewrite:
    #     path:
    #       type: ReplacePrefixMatch
    #       replacePrefixMatch: "/"
    backendRefs:
      - name: argocd-server
        port: 443
